[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusteval"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "clusteval is a python package for unsupervised cluster validation."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["Python", "machine-learning", "unsupervised", "clustering", "dbindex", "silhouette score", "density based clustering", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'scatterd>=1.3.5',
    'pypickle',
    'matplotlib',
    'numpy',
    'pandas',
    'tqdm',
    'seaborn',
    'scikit-learn',
    'colourmap>=1.1.14',
    'datazets>=1.1.0',
]

[project.urls]
Homepage = "https://erdogant.github.io/clusteval"
Download = "https://github.com/erdogant/clusteval/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["clusteval"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "clusteval.__version__" }
